--- a/app/src/main/res/layout/donts2.xml
+++ b/app/src/main/res/layout/donts2.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ExtraText">
+    android:background="@color/background_material_light"
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,17 +25,17 @@
         app:layout_constraintVertical_bias="0.018">
 
         <TextView
-            android:id="@+id/Do5"
+            android:id="@+id/Donts2"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/do_s"
-            android:textColor="@android:color/holo_green_dark"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/dont_s3"
+            android:textColor="@color/colorAccent"
             android:textSize="55sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -43,14 +45,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/dos5"
+            android:id="@+id/donts2"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,18 +81,18 @@
         app:layout_constraintVertical_bias="0.589">
 
         <TextView
-            android:id="@+id/title5"
-            android:layout_width="326dp"
+            android:id="@+id/title1"
+            android:layout_width="wrap_content"
             android:layout_height="46dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/_5_beauty_sleep"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/_2_dont_pop_it_out"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="30sp"
+            android:textSize="32sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,25 +102,24 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/title5"
+            android:id="@+id/desc1"
             android:layout_width="344dp"
             android:layout_height="224dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@android:color/darker_gray"
-            android:text="@string/try_to_sleep_at_least_8_hours_every_night_if_you_don_t_get_enough_shut_eye_your_skin_gets_tired_just_like_you_so_don_t_risk_it_you_can_also_apply_honey_on_your_face_twice_or_thrice_a_week_to_naturally_soothe_and_heal_your_skin"
+            android:text="@string/pop_pimples_because_it_can_lead_to_more_swelling_redness_and_even_scarring_feel_a_pimple_is_on_its_way_just_clean_the_area_with_rose_water_and_place_a_chilled_green_tea_bag_for_10_minutes"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.75" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -139,8 +140,8 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/BacktoHome1"
-            android:layout_width="220dp"
+            android:id="@+id/Back1"
+            android:layout_width="106dp"
             android:layout_height="57dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -148,17 +149,38 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#e4d905"
+            android:background="@android:color/holo_red_dark"
             android:onClick="Home"
-            android:text="@string/finish"
-            android:textColor="@android:color/black"
-            android:textSize="28sp"
+            android:text="@string/back"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.142"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.6" />
+
+        <Button
+            android:id="@+id/Next1"
+            android:layout_width="106dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_green_dark"
+            android:onClick="DosList2"
+            android:text="@string/next"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.857"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
