--- a/app/src/main/res/layout/donts5.xml
+++ b/app/src/main/res/layout/donts5.xml
@@ -23,17 +23,17 @@
         app:layout_constraintVertical_bias="0.018">
 
         <TextView
-            android:id="@+id/Do5"
+            android:id="@+id/Donts5"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
             android:text="@string/do_s"
-            android:textColor="@android:color/holo_green_dark"
+            android:textColor="@color/colorAccent"
             android:textSize="55sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -82,15 +82,15 @@
             android:id="@+id/title5"
             android:layout_width="326dp"
             android:layout_height="46dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/_5_beauty_sleep"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/_5_skipping_sunscreen_sessions"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="30sp"
+            android:textSize="23sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -103,16 +103,16 @@
             android:id="@+id/title5"
             android:layout_width="344dp"
             android:layout_height="224dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@android:color/darker_gray"
-            android:text="@string/try_to_sleep_at_least_8_hours_every_night_if_you_don_t_get_enough_shut_eye_your_skin_gets_tired_just_like_you_so_don_t_risk_it_you_can_also_apply_honey_on_your_face_twice_or_thrice_a_week_to_naturally_soothe_and_heal_your_skin"
+            android:text="@string/skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30"
             android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textSize="23sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
