UI version 2 and Programming version 2.

--- a/app/src/main/res/layout/donts4.xml
+++ b/app/src/main/res/layout/donts4.xml
@@ -126,12 +126,13 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="DontsList3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -150,7 +151,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_dark"
-            android:onClick="Home"
+            android:onClick="DontsList3"
             android:text="@string/back"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -172,7 +173,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="DosList2"
+            android:onClick="DontsList5"
             android:text="@string/next"
             android:textSize="22sp"
             android:textStyle="bold"
