--- a/app/src/main/res/layout/donts2.xml
+++ b/app/src/main/res/layout/donts2.xml
@@ -150,7 +150,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_dark"
-            android:onClick="Home"
+            android:onClick="DontsList1"
             android:text="@string/back"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -172,7 +172,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="DosList2"
+            android:onClick="DontsList3"
             android:text="@string/next"
             android:textSize="22sp"
             android:textStyle="bold"
