--- a/app/src/main/res/layout/donts5.xml
+++ b/app/src/main/res/layout/donts5.xml
@@ -29,10 +29,10 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="4dp"
-            android:text="@string/do_s"
+            android:layout_marginEnd="13dp"
+            android:layout_marginRight="13dp"
+            android:layout_marginBottom="3dp"
+            android:text="@string/dont_s6"
             android:textColor="@color/colorAccent"
             android:textSize="55sp"
             android:textStyle="bold"
