--- a/app/src/main/res/layout/list_of_contents.xml
+++ b/app/src/main/res/layout/list_of_contents.xml
@@ -73,6 +73,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_blue_light"
+            android:onClick="DontsList"
             android:text="@string/dont_s"
             android:textColor="@android:color/black"
             android:textColorLink="@android:color/holo_blue_bright"
