--- a/app/src/main/res/layout/foodtoeat5.xml
+++ b/app/src/main/res/layout/foodtoeat5.xml
@@ -23,34 +23,35 @@
         app:layout_constraintVertical_bias="0.018">
 
         <TextView
-            android:id="@+id/Donts5"
+            android:id="@+id/Foodstoeat5"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
-            android:layout_marginBottom="3dp"
-            android:text="@string/dont_s6"
-            android:textColor="@color/colorAccent"
-            android:textSize="55sp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="4dp"
+            android:text="@string/foods_to_eat5"
+            android:textColor="@android:color/holo_orange_light"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.032"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
-            android:id="@+id/dos5"
+            android:id="@+id/foodstoeat5"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -88,16 +89,16 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/_5_skipping_sunscreen_sessions"
+            android:text="@string/_5_green_tea"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="23sp"
+            android:textSize="30sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/title5"
@@ -110,9 +111,9 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/darker_gray"
-            android:text="@string/skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30"
+            android:text="@string/green_tea_may_protect_your_skin_from_damage_and_aging_the_powerful_compounds_found_in_green_tea_are_called_catechins_and_work_to_improve_the_health_of_your_skin_in_several_ways"
             android:textColor="@android:color/black"
-            android:textSize="23sp"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
