--- a/app/src/main/res/layout/foodstoeat1.xml
+++ b/app/src/main/res/layout/foodstoeat1.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ExtraText">
+    android:background="@color/background_material_light"
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,34 +25,35 @@
         app:layout_constraintVertical_bias="0.018">
 
         <TextView
-            android:id="@+id/Donts5"
+            android:id="@+id/Foodstoeat1"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
-            android:layout_marginBottom="3dp"
-            android:text="@string/dont_s6"
-            android:textColor="@color/colorAccent"
-            android:textSize="55sp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/foods_to_eat1"
+            android:textColor="@android:color/holo_orange_light"
+            android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.032"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
-            android:id="@+id/dos5"
+            android:id="@+id/foodstoeat1"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,8 +82,8 @@
         app:layout_constraintVertical_bias="0.589">
 
         <TextView
-            android:id="@+id/title5"
-            android:layout_width="326dp"
+            android:id="@+id/title1"
+            android:layout_width="wrap_content"
             android:layout_height="46dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -88,19 +91,19 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/_5_skipping_sunscreen_sessions"
+            android:text="@string/_1_fatty_fish"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="23sp"
+            android:textSize="28sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/title5"
+            android:id="@+id/desc1"
             android:layout_width="344dp"
             android:layout_height="224dp"
             android:layout_marginStart="8dp"
@@ -110,15 +113,14 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/darker_gray"
-            android:text="@string/skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30"
+            android:text="@string/fatty_fish_such_as_salmon_mackerel_and_herring_are_excellent_foods_for_healthy_skin_they_are_rich_sources_of_omega_3_fatty_acids_which_are_important_for_maintaining_skin_health_omega_3_fatty_acids_are_necessary_to_keep_skin_thick_supple_and_moisturized_in_fact_a_deficiency_in_omega_3_fats_can_cause_dry_skin"
             android:textColor="@android:color/black"
-            android:textSize="23sp"
+            android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.75" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -139,8 +141,8 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/BacktoHome1"
-            android:layout_width="220dp"
+            android:id="@+id/Back1"
+            android:layout_width="106dp"
             android:layout_height="57dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -148,17 +150,38 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#e4d905"
+            android:background="@android:color/holo_red_dark"
             android:onClick="Home"
-            android:text="@string/finish"
-            android:textColor="@android:color/black"
-            android:textSize="28sp"
+            android:text="@string/back"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.142"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.6" />
+
+        <Button
+            android:id="@+id/Next1"
+            android:layout_width="106dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_green_dark"
+            android:onClick="DontsList2"
+            android:text="@string/next"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.857"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
