--- a/app/src/main/res/layout/remedies3.xml
+++ b/app/src/main/res/layout/remedies3.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="ExtraText">
+    android:background="@color/background_material_light"
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -23,18 +25,18 @@
         app:layout_constraintVertical_bias="0.018">
 
         <TextView
-            android:id="@+id/Donts5"
+            android:id="@+id/Remedies3"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="13dp"
-            android:layout_marginRight="13dp"
-            android:layout_marginBottom="3dp"
-            android:text="@string/dont_s6"
-            android:textColor="@color/colorAccent"
-            android:textSize="55sp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/remedies3"
+            android:textColor="@android:color/holo_purple"
+            android:textSize="50sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,14 +45,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/dos5"
+            android:id="@+id/remedies3"
             android:layout_width="102dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:contentDescription="@string/todo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,8 +81,8 @@
         app:layout_constraintVertical_bias="0.589">
 
         <TextView
-            android:id="@+id/title5"
-            android:layout_width="326dp"
+            android:id="@+id/title1"
+            android:layout_width="wrap_content"
             android:layout_height="46dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -88,19 +90,19 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/_5_skipping_sunscreen_sessions"
+            android:text="@string/_3_sunblock"
             android:textColor="@android:color/holo_blue_dark"
-            android:textSize="23sp"
+            android:textSize="28sp"
             android:textStyle="bold|italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.153"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.028" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/title5"
+            android:id="@+id/desc1"
             android:layout_width="344dp"
             android:layout_height="224dp"
             android:layout_marginStart="8dp"
@@ -110,15 +112,14 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/darker_gray"
-            android:text="@string/skip_the_sunscreen_whether_it_s_cloudy_or_cold_outside_no_excuses_if_you_re_heading_to_a_beach_or_around_reflective_surfaces_like_snow_or_ice_lather_your_skin_up_with_some_more_sunscreen_with_spf_of_at_least_30"
+            android:text="@string/a_substance_that_you_put_on_your_skin_to_prevent_it_from_being_damaged_by_the_sun_that_prevents_any_of_the_sun_s_rays_from_reaching_the_skin"
             android:textColor="@android:color/black"
-            android:textSize="23sp"
+            android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.75"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.75" />
 
     </android.support.constraint.ConstraintLayout>
 
@@ -139,8 +140,8 @@
         app:layout_constraintVertical_bias="1.0">
 
         <Button
-            android:id="@+id/BacktoHome1"
-            android:layout_width="220dp"
+            android:id="@+id/Back1"
+            android:layout_width="106dp"
             android:layout_height="57dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -148,17 +149,38 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#e4d905"
+            android:background="@android:color/holo_red_dark"
             android:onClick="Home"
-            android:text="@string/finish"
-            android:textColor="@android:color/black"
-            android:textSize="28sp"
+            android:text="@string/back"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.142"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            tools:ignore="DuplicateIds" />
+            app:layout_constraintVertical_bias="0.6" />
+
+        <Button
+            android:id="@+id/Next1"
+            android:layout_width="106dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/holo_green_dark"
+            android:onClick="DontsList2"
+            android:text="@string/next"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.857"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
