UI version 3 and Programming version 3.

--- a/app/src/main/res/layout/list_of_contents.xml
+++ b/app/src/main/res/layout/list_of_contents.xml
@@ -108,13 +108,14 @@
             android:id="@+id/Remedies"
             android:layout_width="178dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="11dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="11dp"
             android:background="@android:color/holo_blue_dark"
+            android:onClick="RemList"
             android:text="@string/remedies"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -127,13 +128,14 @@
             android:id="@+id/foods_to_eat"
             android:layout_width="178dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@android:color/holo_blue_dark"
+            android:onClick="FoodList"
             android:text="@string/foods_to_eat"
             android:textColor="@android:color/black"
             android:textSize="25sp"
