--- a/app/src/main/res/layout/remedies2.xml
+++ b/app/src/main/res/layout/remedies2.xml
@@ -150,7 +150,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_dark"
-            android:onClick="Home"
+            android:onClick="RemList1"
             android:text="@string/back"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -172,7 +172,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="DontsList2"
+            android:onClick="RemList3"
             android:text="@string/next"
             android:textSize="22sp"
             android:textStyle="bold"
