--- a/app/src/main/res/layout/foodstoeat4.xml
+++ b/app/src/main/res/layout/foodstoeat4.xml
@@ -151,7 +151,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_red_dark"
-            android:onClick="Home"
+            android:onClick="FoodList3"
             android:text="@string/back"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -173,7 +173,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="DontsList2"
+            android:onClick="FoodList5"
             android:text="@string/next"
             android:textSize="22sp"
             android:textStyle="bold"
