--- a/app/src/main/res/layout/remedies1.xml
+++ b/app/src/main/res/layout/remedies1.xml
@@ -172,7 +172,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="DontsList2"
+            android:onClick="RemList2"
             android:text="@string/next"
             android:textSize="22sp"
             android:textStyle="bold"
