--- a/app/src/main/res/layout/dontsdone.xml
+++ b/app/src/main/res/layout/dontsdone.xml
@@ -212,7 +212,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="6dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="nextActivity"
+            android:onClick="Home"
             android:text="@string/done"
             android:textSize="23sp"
             app:layout_constraintBottom_toBottomOf="parent"
