--- a/app/src/main/res/layout/entername.xml
+++ b/app/src/main/res/layout/entername.xml
@@ -160,8 +160,7 @@
             app:layout_constraintHorizontal_bias="0.705"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.804"
-             />
+            app:layout_constraintVertical_bias="0.804" />
 
         <Button
             android:id="@+id/button"
@@ -174,13 +173,14 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="6dp"
             android:background="@android:color/holo_green_dark"
-            android:onClick="nextActivity"
+            android:onClick="saveData"
             android:text="@string/continue1"
             android:textSize="23sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.965" />
+            app:layout_constraintVertical_bias="0.965"
+            tools:ignore="OnClick" />
     </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
