--- a/app/src/main/res/layout/foodtoeat5.xml
+++ b/app/src/main/res/layout/foodtoeat5.xml
@@ -150,7 +150,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:background="#e4d905"
-            android:onClick="Home"
+            android:onClick="FoodFinish"
             android:text="@string/finish"
             android:textColor="@android:color/black"
             android:textSize="28sp"
